name: Web-Mapper-DB
version: 0.1.0
cabal-version: -any
build-type: Simple
license: BSD4
license-file: ""
copyright:
maintainer:
build-depends:
stability:
homepage: http://github.com/finnsson/Web.Mapper.DB
package-url:
bug-reports:
synopsis:
description: DB-mapper for Web.Mapper.DB. Runtime mapping as well as meta-extraction.
category: web
author: Oscar Finnsson, Emil Nordling
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
exposed-modules: Web.Mapper.Db
exposed: True
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules:
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options:
