name: Web-Mapper-DB
version: 0.1.0
cabal-version: -any
build-type: Simple
license: BSD4
license-file: ""
copyright:
maintainer: Oscar Finnsson
build-depends: base -any, haskell98, template-haskell, HDBC-postgresql>=2.2.0.0, HDBC>=2.2.2, Utilities>=0.1.0, mapper>=0.1.0
stability:
homepage: http://github.com/finnsson/Web.Mapper.DB
package-url:
bug-reports:
synopsis:
description: DB-mapper for Web.Mapper.DB. Runtime mapping as well as meta-extraction.
category: web
author: Oscar Finnsson, Emil Nordling
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
exposed-modules: Web.Mapper.DB
exposed: True
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules:
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options:
